Added failure to the Get User route
