# docs/swagger.json
@@ -34,12 +34,29 @@
                         "schema": {
                             "$ref": "#/definitions/model.UserDTO"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/exception.ApplicationException"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "exception.ApplicationException": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "statusCode": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.UserDTO": {
             "type": "object",
             "required": [
